# pixel-knitter

./: .gitignore  README.md  pyproject.toml
src/pixel_knitter/: __init__.py  __main__.py
src/pixel_knitter/templates/: tricot.html
tests/: test_html_gen.py
